--- a/admin/package.json
+++ b/admin/package.json
@@ -15,10 +15,12 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
+    "tsparticles": "^1.30.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
